--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
   },
   "dependencies": {
     "@okxconnect/ui": "^1.6.1",
+    "@radix-ui/react-popover": "^1.1.4",
+    "@react-google-maps/api": "^2.20.5",
+    "@tabler/icons-react": "^3.26.0",
     "@twa-dev/sdk": "^8.0.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.15.0",
     "lucide-react": "^0.469.0",
     "next": "15.1.2",
     "react": "^19.0.0",
+    "react-day-picker": "^9.4.4",
     "react-dom": "^19.0.0",
+    "react-dropzone": "^14.3.5",
     "react-icons": "^5.4.0",
     "tailwind-merge": "^2.6.0"
   },
