--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@okxconnect/ui": "^1.6.1",
+    "@onflow/fcl": "^1.13.4",
+    "@onflow/types": "^1.4.1",
     "@openzeppelin/contracts": "^5.1.0",
     "@radix-ui/react-popover": "^1.1.4",
     "@react-google-maps/api": "^2.20.5",
+    "@supabase/supabase-js": "^2.47.10",
     "@tabler/icons-react": "^3.26.0",
     "@twa-dev/sdk": "^8.0.1",
     "clsx": "^2.1.1",
@@ -35,6 +38,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.1.2",
+    "pino-pretty": "^13.0.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
